fix: home page background and too large padding in copyright

--- a/css/common.css
+++ b/css/common.css
@@ -42,7 +42,7 @@ header {
 }
 
 #copyright {
-    padding-top: 100px;
+    padding-top: 50px;
     padding-bottom: 20px;
     width: 100%;
     text-align: center;
